# wordle-solver

./: CMakeLists.txt  LICENSE  README.md  example-strategy-output.txt  example_strategy_output.out
include/: helpers.hh  io.hh  solver.hh
scripts/: brun.sh  build.sh  solve.sh
src/: helpers.cc  io.cc  main.cc
src/solver/: core.cc  logging.cc
